# crates/sdkwork-router-github-backend-api/src/paths.rs
@@ -1,2 +1,3 @@
 pub const INTEGRATIONS: &str = "/backend/v3/api/github/integrations";
 pub const INTEGRATIONS_SYNC: &str = "/backend/v3/api/github/integrations/sync";
+pub const CATALOG_SYNC: &str = "/backend/v3/api/github/catalog/sync";
